# python_covid

./: .gitignore  README.md  config.py  dashboard.py  dashboard_covid_qd_v4.py  dashboard_v1_LD.py  main.py  pyproject.toml  requirements.txt  test_covi.ipynb  test_covid.ipynb  v1_qd.py
src/: __init__.py  app.py
src/components/: __init__.py  controls.py  footer.py  header.py  kpi.py
src/pages/: __init__.py  dashboard.py
src/utils/: __init__.py  clean_data.py  common_functions.py  get_data.py
tests/: __init__.py  test_clean_data.py  test_common_functions.py  test_components.py
