[project]
name = "covid-dashboard"
version = "0.1.0"
description = "Dashboard COVID-19 (Dash + Plotly) sur données Our World in Data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0",
    "dash-bootstrap-components>=2.0",
    "pandas>=2.2",
    "plotly>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# Le projet est une application, pas une bibliothèque à empaqueter :
# uv n'a donc pas besoin d'un build backend.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Mêmes neutralisations que dans le dashboard, pour une sortie de test propre.
filterwarnings = [
    "ignore:.*locationmode.*:DeprecationWarning",
    "ignore:(?s).*DataTable.*:DeprecationWarning",
]
